/dev/ipmi0:/dev/ipmi0

--- a/ansible_prometheus_ipmi_exporter/tasks/run_in_docker.yml
+++ b/ansible_prometheus_ipmi_exporter/tasks/run_in_docker.yml
@@ -15,4 +15,4 @@
           restart: always
           labels: "{{ IPMI_exporter_docker_labels }}"
           devices:
-            - "/dev/ipmi0"
+            - "/dev/ipmi0:/dev/ipmi0"
